SPJ-scan-scan: Cherry picked fix for bug#58490 into SPJ branch